II - UI Testing/1 - WEB/Lesson 07 - JavaScript Essentials/examples/const.js
//Const
const a = 10;
a = 20;//error